[metadata]
maintainer = Anton Feldmann
maintainer_email = anton.feldmann@gmail.de

description = calculate the frequence into wavelength and vice versa
long_description = file: README.md
long_description_content_type = text/markdown
keywords = key/value, database,

platforms = Linux

url = https://github.com/afeldman/f2w
download_url = https://github.com/afeldman/f2w

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.5